fix: tag width and wrap(#master)

--- a/components/tag/tag.less
+++ b/components/tag/tag.less
@@ -5,4 +5,5 @@
   background: var(--background);
   transition: color var(--transition-time), background var(--transition-time),
     box-shadow var(--transition-time) !important;
+  width: fit-content;
 }
